Fixed missing margin in base SCSS

--- a/src/assets/styles/blink/_base.scss
+++ b/src/assets/styles/blink/_base.scss
@@ -104,5 +104,6 @@ h6,
 @media (min-width: 992px) {
     .half-width {
         width: 500px;
+        margin: auto;
     }
 }
